--- a/MyShopProject/Areas/MYSHOP/Views/DashboardMenu/FSMDashboard.cshtml
+++ b/MyShopProject/Areas/MYSHOP/Views/DashboardMenu/FSMDashboard.cshtml
@@ -2883,7 +2883,18 @@ Rev Number   DATE            VERSION     DEVELOPER       CHANGES
 
 <script>
     $(document).ready(function () {
-    
+
+        //function hoverImage(isHovered) {
+        //    var images = document.querySelectorAll('.flotting-right-btn li .hoverMenu img');
+
+        //    if (isHovered) {
+        //        images[0].style.display = 'none';
+        //        images[1].style.display = 'block';
+        //    } else {
+        //        images[0].style.display = 'block';
+        //        images[1].style.display = 'none';
+        //    }
+        //}
 });
 </script>
 
