--- a/MyShopProject/Areas/MYSHOP/Views/EnquiryAnalytics/Index.cshtml
+++ b/MyShopProject/Areas/MYSHOP/Views/EnquiryAnalytics/Index.cshtml
@@ -921,18 +921,18 @@
     /*End Class badge*/
 
     .bg-color-1 {
-        background-color: #05916f;
+        background-color: #50025a;
         margin-bottom: 10px;
-        border-radius: 6px;
+        border-radius: 36px;
     }
         .bg-color-1:hover {
-            background-color: #016e54;
+            background-color: #300136;
         }
 
     .bg-color-2 {
         background-color: #0841a5;
         margin-bottom: 10px;
-        border-radius: 6px;
+        border-radius: 36px;
     }
 
             .bg-color-2:hover {
@@ -940,29 +940,29 @@
             }
 
     .bg-color-3 {
-        background-color: #5419cd;
+        background-color: #af1818;
         margin-bottom: 10px;
-        border-radius: 6px;
+        border-radius: 36px;
     }
 
-    .bg-color-3:hover {
-        background-color: #3d07ab;
-    }
+        .bg-color-3:hover {
+            background-color: #910e0e;
+        }
 
     .bg-color-4 {
-        background-color: #63a30a;
+        background-color: #05916f;
         margin-bottom: 10px;
-        border-radius: 6px;
+        border-radius: 36px;
     }
 
         .bg-color-4:hover {
-            background-color: #4a7c04;
+            background-color: #026049;
         }
 
     .bg-color-5 {
         background-color: #d316a4;
         margin-bottom: 10px;
-        border-radius: 6px;
+        border-radius: 36px;
     }
 
         .bg-color-5:hover {
@@ -970,14 +970,24 @@
         }
 
     .bg-color-6 {
-        background-color: #bd850e;
+        background-color: #bd550e;
         margin-bottom: 10px;
-        border-radius: 6px;
+        border-radius: 36px;
     }
 
         .bg-color-6:hover {
             background-color: #956706;
         }
+
+        /*.bg-color-6:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            border-top: 12px solid #ff0000;
+            border-left: 12px solid transparent;
+            border-right: 12px solid transparent;
+        }*/
 
 </style>
 
