--- a/MyShopProject/Areas/MYSHOP/Views/DashboardMenu/DashboardAttendanceFV.cshtml
+++ b/MyShopProject/Areas/MYSHOP/Views/DashboardMenu/DashboardAttendanceFV.cshtml
@@ -80,30 +80,46 @@
                     <li class="relative">
                         @Html.Action("DashboardBranchComboboxFV")
                     </li>
+
+                    @*rev Pallab*@
+                </ul>
+
+                <ul class="mapShowlist clearfix flotting-right-btn">
+
                     @*EnMantis Issue 24729*@
                     @if (Model.Where(x => x.DetailsName == "View Party").Count() > 0)
                     {
-                        <li title="Click to get route details of Employees with Map " id="">
+                     @*<li title="Click to get route details of Employees with Map " id="">*@
+                    <li id="">
                             <div class="pointer hoverMenu rut" onclick="ShowViewParty();">
                                 <span class="text ">
                                     View Party
-                                    <span class="arrr"></span>
+                                    @*<span class="arrr"></span>*@
                                 </span>
-                                <span class="lni lni-user "></span>
+                                @*<span class="lni lni-user "></span>*@
+                                <div class="icon-img">
+                                    <img src="/assests/images/view-party.png" alt="">
+                                </div>
+                                @*<img src="/assests/images/view-party-wt.png" alt="" style="display: none;">*@
                             </div>
+                            <div class="tooltip-customize" title="Click to get party details with Map">Click to get party details with Map</div>
                         </li>
                     }
                     @if (Model.Where(x => x.DetailsName == "View Route").Count() > 0)
                     {
-                        <li title="Click to get route details of Employees with Map " id="">
+                        @*<li title="Click to get route details of Employees with Map " id="">*@
+                        <li id="">
                             <div class="pointer hoverMenu rut" onclick="ShowViewRoute();">
                                 <span class="text ">
                                     View Route
-                                    <span class="arrr"></span>
+                                    @*<span class="arrr"></span>*@
                                 </span>
                                 @*<span class="lni lni-direction "></span>*@
-                                <img src="/assests/images/route.png" alt="">
+                                <div class="icon-img">
+                                    <img src="/assests/images/view-route.png" alt="">
+                                </div>
                             </div>
+                            <div class="tooltip-customize" title="Click to get route details of Employees with Map">Click to get route details of Employees with Map</div>
                             @*<span class="greenTrack" style="cursor:pointer;border-right:1px solid #ccc;" >View Route <img src="/assests/images/locat1.png" width="20px" style="margin-left:5px" /></span>*@
                         </li>
                     }
@@ -113,11 +129,14 @@
                             <div class="pointer hoverMenu mp" onclick="showMapFV();">
                                 <span class="text">
                                     View Map
-                                    <span class="arrr"></span>
+                                    @*<span class="arrr"></span>*@
                                 </span>
                                 @*<span class="lni lni-map"></span>*@
-                                <img src="/assests/images/map.png" alt="">
+                                <div class="icon-img">
+                                    <img src="/assests/images/view-map.png" alt="">
+                                </div>
                             </div>
+                            <div class="tooltip-customize" title="Click to show Map">Click to show Map</div>
                         </li>
                     }
                     @if (Model.Where(x => x.DetailsName == "Live Track Employees At Work").Count() > 0)
@@ -126,55 +145,72 @@
                             <div class="pointer hoverMenu trc" onclick="TrackVisitClick();">
                                 <span class="text">
                                     Live Tracker
-                                    <span class="arrr"></span>
+                                    @*<span class="arrr"></span>*@
                                 </span>
                                 @*<span class="liveBlink"></span>*@
                                 @*<span class="lni lni-map-marker"></span>*@
-                                <img src="/assests/images/tracker.png" alt="">
+                                <div class="icon-img">
+                                    <img src="/assests/images/tracking.png" alt="">
+                                </div>
                             </div>
+
+                            <div class="tooltip-customize" title="Live Tracker">Live Tracker</div>
                             @*separate-left*@
                             @*<span class=" greenTrack" style="cursor:pointer;" >Live Track Employees At Work <img class="pull-right blink cgreen" style="width: 12px; margin: 3px 0 0 5px;" src="/assests/images/Live.png" /></span>*@
                         </li>
                     }
                     @if (Model.Where(x => x.DetailsName == "View Outlet").Count() > 0)
                     {
-                        <li title="Click to View Outlet" id="">
+                        @*<li title="Click to View Outlet" id="">*@
+                        <li id="">
                             <div class="pointer hoverMenu rut" onclick="ShowViewOutlet();">
                                 <span class="text ">
                                     View Outlet
-                                    <span class="arrr"></span>
+                                    @*<span class="arrr"></span>*@
                                 </span>
                                 @*<span class="lni lni-hospital "></span>*@
-                                <img src="/assests/images/view-outlet.png" alt="">
+                                <div class="icon-img">
+                                    <img src="/assests/images/view-outlet.png" alt="">
+                                </div>
                             </div>
+                            <div class="tooltip-customize" title="Click to View Outlet">Click to View Outlet</div>
                             @*<span class="greenTrack" style="cursor:pointer;border-right:1px solid #ccc;" >View Route <img src="/assests/images/locat1.png" width="20px" style="margin-left:5px" /></span>*@
                         </li>
                     }
                     @if (Model.Where(x => x.DetailsName == "Emp Outlet").Count() > 0)
                     {
-                        <li title="Click to get Employee Outlet " id="">
+                        @*<li title="Click to get Employee Outlet " id="">*@
+                        <li id="">
                             <div class="pointer hoverMenu rut" onclick="ShowViewEMPOutlet();">
                                 <span class="text ">
                                     Emp Outlet
-                                    <span class="arrr"></span>
+                                    @*<span class="arrr"></span>*@
                                 </span>
                                 @*<span class="lni lni-users "></span>*@
-                                <img src="/assests/images/emp-outlet.png" alt="">
+                                <div class="icon-img">
+                                    <img src="/assests/images/emp-outlet.png" alt="">
+                                </div>
                             </div>
+                            <div class="tooltip-customize" title="Click to get Employee Outlet">Click to get Employee Outlet</div>
                             @*<span class="greenTrack" style="cursor:pointer;border-right:1px solid #ccc;" >View Route <img src="/assests/images/locat1.png" width="20px" style="margin-left:5px" /></span>*@
                         </li>
                     }
                     @*Rev Sanchita*@
                     @if (Model.Where(x => x.DetailsName == "View Party-Hierarchywise").Count() > 0)
                     {
-                        <li title="Click to get party details hierarchywise with Map " id="step7" class="view-party-hierarchywise">
+                        @*<li title="Click to get party details hierarchywise with Map " id="step7" class="view-party-hierarchywise">*@
+                        <li id="step7" class="view-party-hierarchywise">
                             <div class="pointer hoverMenu rut" onclick="ShowViewPartyHierarchy();">
                                 <span class="text ">
                                     View Party-Hierarchywise
-                                    <span class="arrr"></span>
+                                    @*<span class="arrr"></span>*@
                                 </span>
-                                <span class="lni lni-user "></span>
+                                @*<span class="lni lni-user "></span>*@
+                                <div class="icon-img">
+                                    <img src="/assests/images/vp-hierarchy.png" alt="">
+                                </div>
                             </div>
+                            <div class="tooltip-customize" title="Click to get party details hierarchywise with Map">Click to get party details hierarchywise with Map</div>
                         </li>
                     }
                     @*End of Rev Sanchita*@
