--- a/MyShopProject/Areas/MYSHOP/Views/OrderSummary/Summary.cshtml
+++ b/MyShopProject/Areas/MYSHOP/Views/OrderSummary/Summary.cshtml
@@ -895,6 +895,53 @@
     .w200-mob {
         width: 200px !important;
     }
+
+    .ja_default > div {
+        border-radius: 10px;
+        overflow: hidden;
+    }
+
+    .ja_noTitle .ja_close_round {
+        right: 0;
+        top: 0;
+        background: transparent;
+        line-height: 21px;
+        font-size: 24px;
+        color: #000;
+        border-radius: 40px;
+    }
+
+        .ja_noTitle .ja_close_round:hover {
+            color: #fff;
+        }
+
+        .ja_noTitle .ja_body {
+            text-align: center;
+            font-size: 18px;
+        }
+
+    .ja_btn_wrap.optBack {
+        margin-top: 15px;
+        padding: 10px 0px;
+    }
+
+    .ja_btn, .ja_btn:link, .ja_btn:visited, .ja_btn:active {
+        font-size: 15px;
+    }
+
+    .ja_default {
+        background: transparent;
+    }
+
+    #popup_message {
+        padding-left: 0;
+        text-align: center;
+        font-size: 15px;
+    }
+
+    #refreshgridstatusreportregister #gridorderrsummary {
+        width: 99% !important;
+    }
 </style>
 <script>
     $(document).ready(function () {
