--- a/MyShopProject/assests/css/ftsNewScreen.css
+++ b/MyShopProject/assests/css/ftsNewScreen.css
@@ -202,6 +202,8 @@ ul{
     box-shadow: inset 0 5px 18px rgba(0, 0, 0, 0.12);
     min-height: 98vh;
     box-sizing: border-box;
+
+    overflow:hidden;
 }
 .breadCumb{
     width: 100%;
@@ -504,13 +506,13 @@ ul{
     font-size: 14px;
     /*rev Pallab 25455 */
     /*margin-top: -107px;*/
-    margin-top: -135px;
+    margin-top: -125px;
     /*rev end Pallab 25455 */
     margin-bottom: 0;
     margin-right: -10px;
 }
 .mapShowlist>li:not(:last-child){
-    margin-bottom:5px;
+    margin-bottom:10px;
 }
 .mapShowlist>li{
     display: inline-block;
@@ -525,9 +527,9 @@ ul{
     background: #fff;
     padding: 5px 10px;
     border-radius: 50px;
-    width: 42px;
+    /*width: 42px;
     display: inline-block;
-    position: relative;
+    position: relative;*/
     text-align: center;
     min-height: 32px;
     height: 42px;
@@ -541,8 +543,10 @@ ul{
     }
     .hoverMenu > .lni {
         font-size: 19px;
+        
     }
-.hoverMenu>span.text{
+    /*rev pallab*/
+/*.hoverMenu>span.text{
     display: none;
     opacity: 0;
     font-weight: 500;
@@ -562,8 +566,30 @@ ul{
 }
 .view-party-hierarchywise .hoverMenu > span.text {
     min-width: 175px;
+}*/
+
+    .hoverMenu > span.text
+    {
+        margin-left: 15px;
+    }
+
+.hoverMenu {
+    display: inline-flex;
+    align-items: center;
+    overflow: hidden;
+    width: 170px;
+    /* max-width: 42px; */
+    flex-direction: row-reverse;
+    /* margin-right: -143px; */
+    text-align: left;
+    justify-content: flex-end;
 }
-    /*.hoverMenu span.text .arrr{
+
+.view-party-hierarchywise .hoverMenu {
+    width: 225px;
+}
+/*rev end pallab*/
+/*.hoverMenu span.text .arrr{
     width: 0;
     height: 0;
     border-left: 6px solid transparent;
@@ -576,29 +602,29 @@ ul{
     -moz-transform: translateX(-50%);
     transform: translateX(-50%);
 }*/
-    .hoverMenu span.text .arrr {
-        width: 0;
-        height: 0;
-        border-left: 6px solid transparent;
-        border-right: 6px solid transparent;
-        border-bottom: 9px solid #1d97e2;
-        position: absolute;
-        bottom: -7px;
-        left: 44%;
-        -webkit-transform: translateX(-50%);
-        -moz-transform: translateX(-50%);
-        transform: translateX(-50%);
-        transform: rotate(180deg);
-    }
-.hoverMenu.mp>span.text{
-    background: #27a955;
+.hoverMenu span.text .arrr {
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 9px solid #1d97e2;
+    position: absolute;
+    bottom: -7px;
+    left: 44%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    transform: translateX(-50%);
+    transform: rotate(180deg);
 }
+/*.hoverMenu.mp>span.text{
+    background: #27a955;
+}*/
 .hoverMenu.mp span.text .arrr{
     border-bottom: 9px solid #27a955 !important;
 }
-.hoverMenu.trc>span.text{
+/*.hoverMenu.trc>span.text{
     background: #f066a6;
-}
+}*/
 .hoverMenu.trc span.text .arrr{
     border-bottom: 9px solid #f066a6 !important;
 }
@@ -632,7 +658,8 @@ ul{
     left: 50%;
     transform: translateX(-50%);
 }*/
-    .hoverMenu:hover span.text {
+/*rev pallab*/
+    /*.hoverMenu:hover span.text {
         display: inline-block;
         opacity: 1;
         line-height: 31px;
@@ -641,8 +668,8 @@ ul{
         border-radius: 15px;
         left: 50%;
         transform: translateX(-50%);
-    }
-
+    }*/
+/*rev end pallab*/
 #cmbState + .btn-group > button {
     border-radius:50px;
     overflow:hidden;
@@ -1556,6 +1583,8 @@ div:where(.swal2-container).swal2-backdrop-show, div:where(.swal2-container).swa
     border-radius: 0px;
     margin: 0;
 }
+
+
 
 @media only screen and (min-width: 768px) and (max-width: 1299px)
 {
